Trying to fix the most recent bug on mobile (iOS)

--- a/style.css
+++ b/style.css
@@ -200,12 +200,33 @@ h1, h3, h4 {
 
 
 @media screen and (max-width: 800px) {
-  html {
+  body, html {
+    background-color: #005bd6;
+    color: #ffffff;
+    width: 100%;
+    overflow-x: hidden;
     font-size: 4vw;
+    height: 100%;
   }
 
   .main-intro p {
     font-size: 2em;
+  }
+
+  .portfolio {
+    width: 1080px;
+    margin: 0 auto;
+    overflow-x: scroll;
+}
+
+  .row {
+    width: 230%;
+    display: inline-flex;
+    flex-wrap: nowrap;
+}
+
+  .watermark {
+    display: none;
   }
 }
 
